# aoc

./: .gitignore  Cargo.toml  README.md
src/: main.rs  template.txt
src/template/: day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/commands/: all.rs  download.rs  mod.rs  read.rs  time.rs
