[package]
name = "aoc"
version = "0.1.0"
authors = ["Martin Gudahl Tufte <martingudahltufte@hotmail.com>"]
edition = "2024"
publish = false

[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
io = "0.0.2"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"
